feat: rest api with database